<resources>
    <string name="app_name">MessengerDev</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="enter">Entre</string>
    <string name="accont">Não tem uma conta? Crie aqui!.</string>
    <string name="cadastrar">cadastrar</string>
    <string name="name">Nome</string>
    <string name="imagem">imagem</string>
    <string name="imagem_do_perfil">imagen do perfil</string>
    <string name="contacts">contacts</string>
    <string name="logout">logout</string>
    <string name="select_contact">select_contact</string>
    <string name="textview">TextView</string>

</resources>