<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_image"
        android:text="@string/imagem"
        app:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edit_cadName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_edittext_rounded"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />
    <EditText
        android:id="@+id/edit_cadEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:background="@drawable/bg_edittext_rounded"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edit_cadName"
        app:layout_constraintStart_toStartOf="@+id/edit_cadName"
        app:layout_constraintTop_toBottomOf="@+id/edit_cadName"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editCadTextPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:background="@drawable/bg_edittext_rounded"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_cadEmail"
        app:layout_constraintStart_toStartOf="@+id/edit_cadEmail"
        app:layout_constraintTop_toBottomOf="@+id/edit_cadEmail"
        />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_button_rounded"
        android:text="@string/cadastrar"

        app:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="@+id/editCadTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editCadTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editCadTextPassword" />




</androidx.constraintlayout.widget.ConstraintLayout>